--- a/common-resources/sandbox-administrator-account/pool-store/pool-store.yml
+++ b/common-resources/sandbox-administrator-account/pool-store/pool-store.yml
@@ -22,3 +22,6 @@ Resources:
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: true
       TableName: !Sub "${Environment}-aws-sandbox-accounts-account-pool"
+      TimeToLiveSpecification:
+        AttributeName: ttl
+        Enabled: true
