--- a/apps/lease-janitor/stacks/sandbox-administrator-account/lease-janitor.yml
+++ b/apps/lease-janitor/stacks/sandbox-administrator-account/lease-janitor.yml
@@ -76,3 +76,24 @@ Resources:
                 Payload:
                   action: fetch_expired_leases
               OutputPath: $.Payload
+            RemoveLeases:
+              Type: Map
+              End: true
+              InputPath: $
+              ItemSelector:
+                pk.$: $$.Map.Item.Value.pk
+              ItemProcessor:
+                ProcessorConfig:
+                  Mode: INLINE
+                StartAt: RemoveLease
+                States:
+                  RemoveLease:
+                    Type: Task
+                    Resource: arn:aws:states:::lambda:invoke
+                    End: true
+                    Parameters:
+                      FunctionName: !Sub "${Environment}-aws-sandbox-accounts-auth-client"
+                      Payload:
+                        action: remove_lease
+                        params:
+                          pk.$: $.pk
