--- a/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
+++ b/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
@@ -108,8 +108,7 @@ Resources:
                   action: create_lease
                   params:
                     account.$: States.ArrayGetItem($, 0)
-                    # TEMP: hardcode some values for testing purposes
-                    user_id: 028534f4-60a1-70cc-05fe-5cc39d8c3520
+                    user_id.$: $$.Execution.Input.user_id
               ResultSelector:
                 result:
                   lease_id.$: States.UUID()
