--- a/apps/lease-janitor/stacks/sandbox-administrator-account/lease-janitor.yml
+++ b/apps/lease-janitor/stacks/sandbox-administrator-account/lease-janitor.yml
@@ -70,12 +70,21 @@ Resources:
             FetchExpiredLeases:
               Type: Task
               Resource: arn:aws:states:::lambda:invoke
-              Next: RemoveLeaseAuth
+              Next: CheckIfExpiredLeasesExist
               Parameters:
                 FunctionName: !Sub "${Environment}-aws-sandbox-accounts-db-client"
                 Payload:
                   action: fetch_expired_leases
               OutputPath: $.Payload
+            CheckIfExpiredLeasesExist:
+              Type: Choice
+              Choices:
+                - Variable: $[0]
+                  IsPresent: true
+                  Next: RemoveLeaseAuth
+              Default: Success
+            Success:
+              Type: Succeed
             RemoveLeaseAuth:
               Type: Task
               Resource: arn:aws:states:::lambda:invoke
