--- a/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
+++ b/apps/account-manager/stacks/sandbox-administrator-account/account-manager.yml
@@ -64,7 +64,7 @@ Resources:
       # Use DefinitionString rather than Definition so that we can use null values
       DefinitionString:
         Fn::ToJsonString:
-          StartAt: MarkAccountAsDirty
+          StartAt: FetchDirtyAccounts
           States:
             FetchDirtyAccounts:
               Type: Task
