pull duration to step fn

--- a/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
+++ b/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
@@ -109,6 +109,7 @@ Resources:
                   params:
                     account.$: States.ArrayGetItem($, 0)
                     user_id.$: $$.Execution.Input.user_id
+                    duration: 5m
               ResultSelector:
                 result:
                   lease_id.$: States.UUID()
