--- a/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
+++ b/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
@@ -102,7 +102,7 @@ Resources:
               Parameters:
                 FunctionName: !Sub "${Environment}-aws-sandbox-accounts-db-client"
                 Payload:
-                  action: write_lease
+                  action: write_active_lease
                   params:
                     lease_id.$: $.lease_id
                     account_id.$: $.account_id
