--- a/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
+++ b/apps/lease-creator/stacks/sandbox-administrator-account/lease-creator.yml
@@ -83,11 +83,11 @@ Resources:
               Parameters:
                 FunctionName: !Sub "${Environment}-aws-sandbox-accounts-db-client"
                 Payload:
-                  action: write_active_lease
+                  action: write_pending_lease
                   params:
                     lease_id.$: States.UUID()
+                    account_id.$: $
                     user_id.$: $$.Execution.Input.user_id
-                    duration.$: $$.Execution.Input.duration
               ResultSelector:
                 result:
                   lease_id.$: $.Payload.lease_id
