--- a/apps/account-cleaner/aws-nuke.template.yml
+++ b/apps/account-cleaner/aws-nuke.template.yml
@@ -26,7 +26,16 @@ account-blocklist:
 
 resource-types:
   excludes:
-    - S3Object # Let the S3Bucket delete all Objects instead of individual objects (optimization)
+    # Let the S3Bucket delete all Objects instead of individual objects (optimization)
+    - S3Object
+    # some VPC resources that exist in the networking account but are shared with sandbox accounts
+    # an SCP prevents creating new ones in sandbox accounts
+    - EC2InternetGateway
+    - EC2VPC
+    - EC2RouteTable
+    - EC2Subnet
+    - EC2DHCPOption
+    - EC2InternetGatewayAttachment
 
 presets:
   sso:
