--- a/apps/account-cleaner/aws-nuke.template.yml
+++ b/apps/account-cleaner/aws-nuke.template.yml
@@ -36,6 +36,8 @@ resource-types:
     - EC2Subnet
     - EC2DHCPOption
     - EC2InternetGatewayAttachment
+    # service catalog products are managed centrally
+    - ServiceCatalogProvisionedProduct
 
 presets:
   sso:
